--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ header{
     justify-content: end;
     background-color:#1B1B7D;
 }
+.about{
+    padding-left: 44em;
+}
 .portfolio_{
     padding-left: 1.5em;
 }
@@ -21,7 +24,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top:1em;
+    margin-top:1.5em;
     position:static;
 }
 .web-dev{
@@ -32,10 +35,13 @@ header{
     justify-content: center;
     margin-top: -3.5em;
 }
-.banner{
-    border-width:1px;
-    border-style:dashed;
-    border-color:white;
-    margin-left: 16em;
-    margin-right: 16em;
+.Meteor-Falling-PNG{
+    position:absolute;
+    z-index: +1;
+    top:8em;
+    left:17em;
+    width: 50em;
+    height: 50em;
+    opacity: 80%;
 }
+
