--- a/link.css
+++ b/link.css
@@ -1,4 +1,8 @@
-.first-name, .web-dev {
+.first-name, 
+.web-dev,
+.about_,
+.portfolio,
+.contact_ {
     font-family: "Dancing Script", serif;
     font-optical-sizing: auto;
     font-style: normal;
