--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ a{
     text-decoration: none;
     color: white;
 }
-
+h1{
+    color: white;
+}
 /* header */
 header{
     color: white;
@@ -30,6 +32,13 @@ header{
 .contact{
     padding-left: 1.5em;
     margin-right: 1em   ;
+}
+.modelisation{
+    margin-right: 1em;
+    padding-left: 0.5em;
+}
+.acceuil{
+    padding-right: 1em;
 }
 
 /*name */
@@ -270,7 +279,14 @@ footer{
         }
     }
 }
-  
+/*PARTIE Modelisation 3D*/
+.video-pont{
+    height: 50%;
+    width: 50%;
+    margin-left: 5em;
+}
+
+
 @media (max-width: 480px) {
     .button.x {
       max-width: 100%;
