--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
     color: white;
     display: flex;
     justify-content: end;
-    background-color:#0077B6;
+    background: linear-gradient(180deg, rgba(0,119,182,1) 0%, rgba(2,62,138,1) 90%);
     margin-top: -15em;
     margin-left: -1em;
     width: 90em;
@@ -266,18 +266,25 @@ footer{
     display: flex;
     align-items: center;
     color: white;
-    background-color: #0077B6;
+    background: linear-gradient(0deg, rgba(0,119,182,1) 65%, rgba(2,62,138,1) 100%);
     height: 5em;
+    width: 101.7%;
+    margin-left: -1em;
+    margin-bottom: -1em;
 }
 .footer{
     display: flex;
     align-items: center;
     color: white;
-    background-color: #0077B6;
+    background: linear-gradient(0deg, rgba(0,119,182,1) 65%, rgba(2,62,138,1) 100%);
     height: 5em;
     margin-top: 2em;
+    width: 110%;
+    margin-left: -1em;
+    margin-bottom: -1em;
 }
 .copyright{
+    margin-top: 3%;
     margin-left: 45%;
 }
 
