--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #023E8A;
+    background-color: #000000;
 }
 h2{
     color: white;
@@ -22,7 +22,7 @@ header{
     color: white;
     display: flex;
     justify-content: end;
-    background: linear-gradient(180deg, rgba(0,119,182,1) 0%, rgba(2,62,138,1) 90%);
+    background: linear-gradient(180deg, rgb(82, 82, 82) 0%, rgb(0, 0, 0) 90%);
     margin-top: -15em;
     margin-left: -1.5em;
     width: 101.7%;
@@ -266,7 +266,7 @@ footer{
     display: flex;
     align-items: center;
     color: white;
-    background: linear-gradient(0deg, rgba(0,119,182,1) 65%, rgba(2,62,138,1) 100%);
+    background: linear-gradient(0deg, rgb(97, 97, 97) 65%, rgb(0, 0, 0) 100%);
     height: 5em;
     width: 101.7%;
     margin-left: -1em;
@@ -276,7 +276,7 @@ footer{
     display: flex;
     align-items: center;
     color: white;
-    background: linear-gradient(0deg, rgba(0,119,182,1) 65%, rgba(2,62,138,1) 100%);
+    background: linear-gradient(0deg, rgb(97, 97, 97) 65%, rgb(0, 0, 0) 100%);
     height: 5em;
     margin-top: 2em;
     width: 110%;
