modification des projets dans la page index et modification du footer de la page 3D

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ body {
     background-color: var(--bg-darker);
 }
 
+a{
+    text-decoration: none;
+}
+
 .hero-section {
     display: flex;
     flex-direction: column;
