--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
 
 a{
     text-decoration: none;
+    color:white;
 }
 
 .hero-section {
@@ -73,14 +74,13 @@ a{
     width: 100%;
     flex-direction: column;
     justify-content: center;
-    padding: 16px 24px;
+    padding: 16px 0px;
 }
 
 .nav-content {
     display: flex;
     width: 100%;
     gap: 20px;
-    flex-wrap: wrap;
     justify-content: space-between;
     padding: 3px 0;
 }
@@ -158,6 +158,12 @@ a{
     margin-top: 27px;
 }
 
+#hero-buttons{
+    display: flex;
+    justify-content: center;
+    margin-top: -1.5em;
+}
+
 .hero-buttons {
     display: flex;
     margin-top: 38px;
@@ -232,6 +238,7 @@ a{
 .section-heading-accent {
     color: var(--primary-color);
 }
+
 
 .projects-grid,
 .skills-grid {
@@ -316,6 +323,23 @@ a{
 .skills-list li {
     margin-bottom: 8px;
 }
+.skills-javascript{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+.skills-javascript li{
+    font-size: 0.8rem;
+    margin-bottom: 2px;
+    display: inline-block;
+    padding: 3px 4px;
+}
+.separation_js{
+    background-color: white;
+    width: 1px;
+    height: 15px;
+    margin: 5px 7px;
+}
 
 .contact-form-container {
     background-color: var(--bg-dark);
@@ -393,6 +417,7 @@ a{
     padding-right: 1.5em;
 }
 
+/* ------------------- animation titre ------------------- */
 .masked-text {
     font-size: 5rem;
     font-weight: bold;
@@ -405,6 +430,7 @@ a{
     -webkit-text-fill-color: transparent;
     animation: animate-background 20s infinite linear;
 }
+
 
 @keyframes animate-background {
     0% {
@@ -446,9 +472,49 @@ a{
   .hover-underline:hover::before {
     transform: scaleX(1);
   }
+/* ------------------- Connexion ------------------- */
+  .hidden {
+    display: none;
+}
+
+.visible {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 40px;
+}
+/* ------------------- Buger Menu ------------------- */
+.nav-links_burger{
+    /* display: none; */
+    position: absolute;
+    height: 0px;
+    right: 2rem;
+    top: 60px;
+    width: 300px;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(15px);
+    overflow: hidden;
+    border-radius: 12px;
+    transition: height 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.nav-links_burger.open{
+    height: 550px;
+}
+.burger{
+    padding-left: 2rem;
+    margin-top: 2rem;
+}
+i{
+    font-size: 1.5rem;
+    color: var(--text-light);
+}
+#menu_button{
+    display: none;
+}
+
+/* ------------------- Responsive Styles ------------------- */
 
 @media (max-width: 991px) {
-    .nav-container,
     .hero-text-container,
     .projects-section,
     .skills-section,
@@ -479,6 +545,28 @@ a{
         gap: 20px;
         text-align: center;
     }
+    .nav-links{
+        display: none;
+    }
+    .nav-links_burger{
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        font-size: 16px;
+        color: var(--text-light);
+        z-index: 1000;
+    }
+    .devider{
+        height: 1px;
+        background-color: white;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 1rem;
+    }
+    #menu_button{
+        display: block;
+    }
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -489,3 +577,25 @@ a{
         transition: none;
     }
 }
+@media (min-width: 990px) {
+    .nav-links_burger{
+        display: none;
+    }
+    
+}
+@media (max-width: 490px){
+    .nav-wrapper{
+        padding: 16px 0;
+    }
+}
+@media (min-width: 1441px){
+    .hero-image{
+        height: 120%;
+    }
+    .section-heading{
+        margin-top: 2em;
+    }
+}
+
+
+
