--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,12 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     font-family: 'Inter', sans-serif;
     line-height: 1.5;
     color: var(--text-light);
     background-color: var(--bg-darker);
+    scroll-behavior: smooth;
 }
 
 a{
@@ -59,8 +60,10 @@ a{
 }
 
 .nav-container {
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
     border-bottom: 1px solid var(--border-color);
     display: flex;
     width: 100%;
@@ -126,7 +129,7 @@ a{
     max-width: 100%;
     flex-direction: column;
     align-items: flex-start;
-    margin: 196px 0 -52px;
+    margin: 250px 0 -52px;
     padding: 0 24px;
 }
 
@@ -167,7 +170,6 @@ a{
 .hero-buttons {
     display: flex;
     margin-top: 38px;
-    padding-right: 80px;
     gap: 16px;
     font-size: 16px;
     flex-wrap: wrap;
@@ -253,7 +255,7 @@ a{
     background-color: var(--bg-dark);
     overflow: hidden;
     transition: transform 0.3s ease;
-    height: 475px;
+    height: 400px;
 }
 
 .project-card:hover {
@@ -516,6 +518,10 @@ i{
 #menu_button{
     display: none;
 }
+.button-up-div{
+    display: none;
+}
+
 
 /* ------------------- Responsive Styles ------------------- */
 
@@ -571,6 +577,24 @@ i{
     }
     #menu_button{
         display: block;
+    }
+    .button-up-div{
+        display: block;
+    }
+    .button-up{
+        z-index: 1000;
+        position: fixed;
+        background-color: rgb(129, 0, 155);
+        border-color: rgb(129, 0, 155);
+        left: 80%;
+        top: 90%;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+    .fleche-top{
+        height: 25px;
+        width: 25px; 
     }
 }
 
